trunk/Archive2/de/47a0aa38b90c5b/output
main.cpp: In function 'int N::init()':
main.cpp:11:9: error: redefinition of 'int N::init()'
     int init()      // Definition appears first
         ^
main.cpp:3:9: note: 'int N::init()' previously defined here
     int init()      // Definition appears first
         ^
main.cpp: At global scope:
main.cpp:15:15: warning: 'N::x' defined but not used [-Wunused-variable]
     const int x = init();
               ^
