trunk/Archive2/de/47a0aa38b90c5b/main.cpp
namespace N
{
    int init()      // Definition appears first
    {
        return 42;
    }       
}

namespace N
{
    int init()      // Definition appears first
    {
        return 42;
    }
    const int x = init();
}

int main()
{
}